--- a/themes/kurtpaullevy-understrap-child/src/sass/theme/_lightbox.scss
+++ b/themes/kurtpaullevy-understrap-child/src/sass/theme/_lightbox.scss
@@ -13,6 +13,8 @@
 	background-color: white;
 	z-index: 9999;
 	transition: opacity 0.5s ease, visibility 0s 0.5s;
+	height: 100vh; // fallback
+	height: 100dvh; // modern browsers
 
 	&.lightbox-gallery--open {
 		visibility: visible; 
